solution-sketch-be: Initial basic folders

--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "author": "19120508 <hieu.nguyen@southasiaservices.com>",
   "license": "MIT",
   "scripts": {
-    "start":  "concurrently \"yarn\" \"cd software-capstone-fe && yarn && yarn start\" \"cd software-capstone-be && yarn && yarn start\""
+    "start": "concurrently \"yarn\" \"cd software-capstone-fe && yarn && yarn start\" \"cd software-capstone-be && yarn && yarn start\""
   },
   "dependencies": {
-    "concurrently": "^7.6.0"
+    "concurrently": "^7.6.0",
+    "yarn": "^1.22.19"
   }
 }
