--- a/software-capstone-be/package.json
+++ b/software-capstone-be/package.json
@@ -8,9 +8,7 @@
     "start": "node ./build/app.js"
   },
   "devDependencies": {
-    "nodemon": "^2.0.21"
-  },
-  "dependencies": {
+    "nodemon": "^2.0.21",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
   }
