--- a/software-capstone-be/package.json
+++ b/software-capstone-be/package.json
@@ -4,12 +4,18 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "build": "npx tsc",
     "dev": "nodemon ./src/app.ts",
-    "start": "node ./build/app.js"
+    "start": "npm run build && node ./build/app.js"
   },
   "devDependencies": {
     "nodemon": "^2.0.21",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.17",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2"
   }
 }
