--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "19120508 <hieu.nguyen@southasiaservices.com>",
   "license": "MIT",
   "scripts": {
-    "start":  "concurrently \"yarn\" \"cd software-capstone-fe && yarn && yarn start\" \"cd software-capstone-be && yarn && yarn start\""
+    "start":  "concurrently \"yarn\" \"cd software-capstone-fe && yarn && yarn start\" \"cd software-capstone-be && yarn && yarn start\"",
+    "dev": "concurrently \"cd software-capstone-fe && yarn start\" \"cd software-capstone-be && yarn start\""
   },
   "dependencies": {
     "concurrently": "^7.6.0"
