--- a/software-capstone-fe/.env.development
+++ b/software-capstone-fe/.env.development
@@ -1,6 +1,6 @@
 API_URL=http://localhost:5000/
 REALM_NAME=realmSAS
 PORTAL_NAME=PARTNER_PORTAL
-KEYCLOAK_URL=https://software-capstone-sso.com
-KEYCLOAK_REALM=SOFTWARE_CAPSTONE
-KEYCLOAK_CLIENT_ID=SOFTWARE_CAPSTONE-console
+REACT_APP_KEYCLOAK_URL=http://localhost:4000/
+REACT_APP_KEYCLOAK_REALM=software-capstone
+REACT_APP_KEYCLOAK_CLIENT_ID=software-capstone
