--- a/keycloak/compose.yml
+++ b/keycloak/compose.yml
@@ -25,10 +25,22 @@ services:
     image: postgres:12
     command: postgres -c 'max_connections=200'
     volumes:
-      - postgres_data_keycloak: /var/lib/postgresql/data
+      - postgres_data_keycloak:/var/lib/postgresql/data
     environment:
       POSTGRES_DB: keycloak
       POSTGRES_USER: keycloak
       POSTGRES_PASSWORD: admin@database
     healthcheck:
       test: "exit 0"
+    ports:
+      - "5436:5432"
+    networks:
+      - keycloak_dev_network
+
+volumes:
+  postgres_data_keycloak: 
+
+networks:
+  keycloak_dev_network:
+    driver: bridge
+
