--- a/keycloak/compose.yml
+++ b/keycloak/compose.yml
@@ -1,31 +1,34 @@
 version: '3.9'
 
+volumes:
+  postgres_data_keycloak:
+
 services:
   keycloak: 
-    image: quay.io/keycloak/keycloak:21.0.1
-    command: start-dev
+    image: jboss/keycloak:21.0.1
+    # command: start-dev
     environment: 
       KC_DB: postgres
       KC_DB_URL_HOST: keycloak_postgres_database
       KC_DB_URL_DATABASE: keycloak
       KC_DB_PASSWORD: admin@database
-      KC_DB_USERNSME: keycloak
+      KC_DB_USERNAME: keycloak
       KC_DB_SCHEMA: public
       KEYCLOAK_ADMIN: admin
       KEYCLOAK_ADMIN_PASSWORD: Software@capstone
     ports:
-      - "4000:8080"
+      - "8080:8080"
     depends_on:
       keycloak_postgres_database:
         condition: service_healthy
-    networks:
-      - keycloak_dev_network
+    # networks:
+    #   - keycloak_dev_network
 
   keycloak_postgres_database:
     image: postgres:12
-    command: postgres -c 'max_connections=200'
+    # command: postgres -c 'max_connections=200'
     volumes:
-      - postgres_data_keycloak:/var/lib/postgresql/data
+      - postgres_data_keycloak: /var/lib/postgresql/data
     environment:
       POSTGRES_DB: keycloak
       POSTGRES_USER: keycloak
@@ -33,14 +36,12 @@ services:
     healthcheck:
       test: "exit 0"
     ports:
-      - "5436:5432"
-    networks:
-      - keycloak_dev_network
+      - "5432:5432"
+    # networks:
+    #   - keycloak_dev_network
 
-volumes:
-  postgres_data_keycloak: 
 
-networks:
-  keycloak_dev_network:
-    driver: bridge
+# networks:
+#   keycloak_dev_network:
+#     driver: bridge
 
