--- a/keycloak/compose.yml
+++ b/keycloak/compose.yml
@@ -8,11 +8,12 @@ services:
     image: jboss/keycloak:21.0.1
     # command: start-dev
     environment: 
-      KC_DB: postgres
+      DB_VENDOR: postgres
+      DB_ADDR: postgres
+      DB_DATABASE: keycloak
+      DB_USER: keycloak
+      DB_PASSWORD: admin@database
       KC_DB_URL_HOST: keycloak_postgres_database
-      KC_DB_URL_DATABASE: keycloak
-      KC_DB_PASSWORD: admin@database
-      KC_DB_USERNAME: keycloak
       KC_DB_SCHEMA: public
       KEYCLOAK_ADMIN: admin
       KEYCLOAK_ADMIN_PASSWORD: Software@capstone
@@ -21,6 +22,7 @@ services:
     depends_on:
       keycloak_postgres_database:
         condition: service_healthy
+    restart: unless-stopped
     # networks:
     #   - keycloak_dev_network
 
@@ -37,6 +39,7 @@ services:
       test: "exit 0"
     ports:
       - "5432:5432"
+    restart: unless-stopped
     # networks:
     #   - keycloak_dev_network
 
