--- a/software-capstone-be/package.json
+++ b/software-capstone-be/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "@types/express": "^4.17.17",
+    "@types/mysql": "^2.15.21",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql": "^2.18.1"
   }
 }
