--- a/software-capstone-be/package.json
+++ b/software-capstone-be/package.json
@@ -15,9 +15,11 @@
   },
   "dependencies": {
     "@types/express": "^4.17.17",
+    "@types/express-fileupload": "^1.4.1",
     "@types/mysql": "^2.15.21",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "mysql": "^2.18.1"
   }
 }
