--- a/software-capstone-be/package.json
+++ b/software-capstone-be/package.json
@@ -17,9 +17,11 @@
     "@types/express": "^4.17.17",
     "@types/express-fileupload": "^1.4.1",
     "@types/mysql": "^2.15.21",
+    "@types/uuid": "^9.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "uuid": "^9.0.0"
   }
 }
