--- a/software-capstone-fe/package.json
+++ b/software-capstone-fe/package.json
@@ -35,7 +35,7 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "GENERATE_SOURCEMAP=false react-scripts start",
+    "start": "PORT=3006 GENERATE_SOURCEMAP=false react-scripts start",
     "winstart": "set \"GENERATE_SOURCEMAP=false\" && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
