--- a/software-capstone-be/package.json
+++ b/software-capstone-be/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "mariadb": "^3.1.1",
     "mysql": "^2.18.1",
     "uuid": "^9.0.0"
   }
