Add docker file

--- a/software-capstone-fe/Dockerfile
+++ b/software-capstone-fe/Dockerfile
@@ -1,10 +1,10 @@
 FROM node:16
 
-WORKDIR /software-capstone
+WORKDIR /software-capstone-fe
 
 COPY yarn.lock package.json ./
 
-EXPOSE 3030
+EXPOSE 3000
 
 RUN yarn
 
