feat: add unit test

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start":  "concurrently \"yarn\" \"cd software-capstone-fe && yarn && yarn start\" \"cd software-capstone-be && yarn && yarn start\"",
     "winstart":  "concurrently \"yarn\" \"cd software-capstone-fe && yarn && yarn winstart\" \"cd software-capstone-be && yarn && yarn start\"",
-    "dev": "concurrently \"cd software-capstone-fe && yarn start\" \"cd software-capstone-be && yarn start\"",
+    "dev": "concurrently \"cd software-capstone-fe && yarn start\" \"cd software-capstone-be && yarn dev\"",
     "windev": "concurrently \"cd software-capstone-fe && yarn winstart\" \"cd software-capstone-be && yarn start\""
   },
   "dependencies": {
