--- a/software-capstone-be/package.json
+++ b/software-capstone-be/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "npx tsc",
     "dev": "nodemon ./src/app.ts",
-    "start": "npm run build && node ./build/app.js"
+    "start": "npm run build && node ./build/app.js",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch"
   },
   "devDependencies": {
     "nodemon": "^2.0.21",
@@ -16,13 +18,18 @@
   "dependencies": {
     "@types/express": "^4.17.17",
     "@types/express-fileupload": "^1.4.1",
+    "@types/jest": "^29.5.1",
     "@types/mysql": "^2.15.21",
     "@types/uuid": "^9.0.1",
+    "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "jest": "^29.5.0",
     "mariadb": "^3.1.1",
     "mysql": "^2.18.1",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
     "uuid": "^9.0.0"
   }
 }
