--- a/.github/workflows/capstone-be-CI.yml
+++ b/.github/workflows/capstone-be-CI.yml
@@ -14,15 +14,15 @@ jobs:
         working-directory: ./software-capstone-be
     steps:
     - name: Checkout repository
-    - uses: actions/checkout@v3
+      uses: actions/checkout@v3
     
     - name: Set up Node.js
-    - uses: actions/setup-node@v3
+      uses: actions/setup-node@v3
       with:
         node-version: 16.x
         
     - name: Install dependencies
-    - run: yarn install --frozen-lockfile
+      run: yarn install --frozen-lockfile
     
     - name: Run Jest tests
-    - run: yarn test --  sc.test.ts
+      run: yarn test --  sc.test.ts
