--- a/.github/workflows/capstone-be-CI.yml
+++ b/.github/workflows/capstone-be-CI.yml
@@ -23,6 +23,9 @@ jobs:
         
     - name: Install dependencies
       run: yarn install --frozen-lockfile
+
+    - name: Build Node JS app
+      run: yarn run build
     
     - name: Run Jest tests
       run: yarn test --  sc.test.ts
