--- a/.github/workflows/capstone-be-CI.yml
+++ b/.github/workflows/capstone-be-CI.yml
@@ -26,6 +26,14 @@ jobs:
 
     - name: Build Node JS app
       run: yarn run build
+      env:
+          APP_PORT: ${{ secrets.APP_PORT }}
+          DB_PORT: ${{ secrets.DB_PORT }}
+          DB_HOST: ${{ secrets.DB_HOST }}
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_NAME: ${{ secrets.DB_NAME }}
+          DB_CONNECTION_LIMIT: ${{ secrets.DB_CONNECTION_LIMIT }}
     
     - name: Run Jest tests
       run: yarn test --  sc.test.ts
