--- a/.github/workflows/capstone-be-CD.yml
+++ b/.github/workflows/capstone-be-CD.yml
@@ -28,9 +28,9 @@ jobs:
          cd -
          sudo docker stop be_server1_production || true 
          sudo docker rm be_server1_production || true
-         sudo docker run -m=4g -t -d -p ${{ secrets.APP_PORT }}:${{ secrets.APP_PORT }} \
+         sudo docker run -m=4g -t -d -p ${{ secrets.APP_PORT_1 }}:${{ secrets.APP_PORT_1 }} \
            --name be_server1_production \
-          --env APP_PORT=${{ secrets.APP_PORT }} \
+          --env APP_PORT=${{ secrets.APP_PORT_1 }} \
           --env DB_PORT=${{ secrets.DB_PORT }} \
           --env DB_HOST=${{ secrets.DB_HOST }} \
           --env DB_USER=${{ secrets.DB_USER }} \
