--- a/software-capstone-fe/package.json
+++ b/software-capstone-fe/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-icons": "^4.8.0",
+    "react-json-view": "^1.21.3",
     "react-redux": "^8.0.5",
     "react-router": "^6.9.0",
     "react-router-dom": "^6.9.0",
