--- a/software-capstone-be/package.json
+++ b/software-capstone-be/package.json
@@ -11,6 +11,7 @@
     "test:watch": "jest --watch"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "nodemon": "^2.0.21",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
@@ -22,6 +23,7 @@
     "@types/mysql": "^2.15.21",
     "@types/uuid": "^9.0.1",
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
