--- a/software-capstone-fe/.env
+++ b/software-capstone-fe/.env
@@ -1,5 +1,5 @@
 
-API_URL=http://localhost:5000/
+API_URL=http://localhost:8090
 REALM_NAME=realmSAS
 PORTAL_NAME=PARTNER_PORTAL
 REACT_APP_KEYCLOAK_URL=http://localhost:4000/
