--- a/software-capstone-fe/.env.development
+++ b/software-capstone-fe/.env.development
@@ -1,4 +1,4 @@
-API_URL=http://localhost:5000/
+API_URL=http://localhost:8090
 REALM_NAME=realmSAS
 PORTAL_NAME=PARTNER_PORTAL
 REACT_APP_KEYCLOAK_URL=http://localhost:4000/
