--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "windev": "concurrently \"cd software-capstone-fe && yarn winstart\" \"cd software-capstone-be && yarn start\""
   },
   "dependencies": {
+    "@improbable-eng/grpc-web": "^0.15.0",
     "@types/cors": "^2.8.13",
     "concurrently": "^7.6.0",
     "cors": "^2.8.5",
+    "google-protobuf": "^3.21.2",
+    "grpc-web": "^1.4.2",
     "styled-components": "^6.0.0-rc.2",
     "yarn": "^1.22.19"
   }
