--- a/software-capstone-fe/package.json
+++ b/software-capstone-fe/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.7.10",
+    "@grpc/grpc-js": "^1.8.15",
     "@react-keycloak/web": "^3.4.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.14.1",
@@ -20,6 +21,10 @@
     "graphql": "15.5.3",
     "history": "^5.3.0",
     "keycloak-js": "^21.0.1",
+    "protobufjs": "^7.2.3",
+    "protobufjs-cli": "^1.1.1",
+    "protoc-gen-js": "^3.21.2",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
