--- a/.github/workflows/capstone-be-CD.yml
+++ b/.github/workflows/capstone-be-CD.yml
@@ -21,14 +21,13 @@ jobs:
         script_stop: true
         script: |
          cd software-capstone
+         git checkout be-production
          git pull
          cd software-capstone-be
          sudo docker build --platform linux/amd64 -t namphamhcmus1906/capstone:be.production . 
          cd -
-         sudo docker stop be_server1_production || true 
-         sudo docker rm be_server1_production || true
          sudo docker run -m=4g -t -d -p ${{ secrets.APP_PORT_1 }}:${{ secrets.APP_PORT_1 }} \
-           --name be_server1_production \
+           --name be_nodejs_production \
           --env APP_PORT=${{ secrets.APP_PORT_1 }} \
           --env DB_PORT=${{ secrets.DB_PORT }} \
           --env DB_HOST=${{ secrets.DB_HOST }} \
