--- a/.github/workflows/capstone-be-CD.yml
+++ b/.github/workflows/capstone-be-CD.yml
@@ -26,14 +26,5 @@ jobs:
          cd software-capstone-be
          sudo docker build --platform linux/amd64 -t namphamhcmus1906/capstone:be.production . 
          cd -
-         sudo docker run -m=4g -t -d -p ${{ secrets.APP_PORT_1 }}:${{ secrets.APP_PORT_1 }} \
-           --name be_nodejs_production \
-          --env APP_PORT=${{ secrets.APP_PORT_1 }} \
-          --env DB_PORT=${{ secrets.DB_PORT }} \
-          --env DB_HOST=${{ secrets.DB_HOST }} \
-          --env DB_USER=${{ secrets.DB_USER }} \
-          --env DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
-          --env DB_NAME=${{ secrets.DB_NAME }} \
-          --env DB_CONNECTION_LIMIT= ${{ secrets.DB_CONNECTION_LIMIT }} \
-          namphamhcmus1906/capstone:be.production
+         sudo docker run -m=4g -t -d -p ${{ secrets.APP_PORT_1 }}:${{ secrets.APP_PORT_1 }} --name be_nodejs_production --env APP_PORT=${{ secrets.APP_PORT_1 }}  --env DB_PORT=${{ secrets.DB_PORT }} --env DB_HOST=${{ secrets.DB_HOST }} --env DB_USER=${{ secrets.DB_USER }}  --env DB_PASSWORD=${{ secrets.DB_PASSWORD }} --env DB_NAME=${{ secrets.DB_NAME }}  --env DB_CONNECTION_LIMIT= ${{ secrets.DB_CONNECTION_LIMIT }}  namphamhcmus1906/capstone:be.production
    
