--- a/.github/workflows/capstone-be-CD.yml
+++ b/.github/workflows/capstone-be-CD.yml
@@ -7,6 +7,14 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+     APP_PORT_1: ${{ secrets.APP_PORT_1 }}
+     DB_PORT: ${{ secrets.DB_PORT }}
+     DB_HOST: ${{ secrets.DB_HOST }}
+     DB_USER: ${{ secrets.DB_USER }}
+     DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+     DB_NAME: ${{ secrets.DB_NAME }}  
+     DB_CONNECTION_LIMIT: ${{ secrets.DB_CONNECTION_LIMIT }}
     defaults:
       run:
         working-directory: ./software-capstone-be
@@ -17,6 +25,7 @@ jobs:
         host: ${{ secrets.HOST }}
         key: ${{ secrets.SSH_KEY }}
         username: ${{ secrets.USER_NAME }}
+        envs: FOO,BAR,SHA
         command_timeout: 20m
         script_stop: true
         script: |
@@ -26,5 +35,7 @@ jobs:
          cd software-capstone-be
          sudo docker build --platform linux/amd64 -t namphamhcmus1906/capstone:be.production . 
          cd -
-         sudo docker run -m=4g -t -d -p ${{ secrets.APP_PORT_1 }}:${{ secrets.APP_PORT_1 }} --name be_nodejs_production --env APP_PORT=${{ secrets.APP_PORT_1 }}  --env DB_PORT=${{ secrets.DB_PORT }} --env DB_HOST=${{ secrets.DB_HOST }} --env DB_USER=${{ secrets.DB_USER }}  --env DB_PASSWORD=${{ secrets.DB_PASSWORD }} --env DB_NAME=${{ secrets.DB_NAME }}  --env DB_CONNECTION_LIMIT= ${{ secrets.DB_CONNECTION_LIMIT }}  namphamhcmus1906/capstone:be.production
+         sudo docker stop be_nodejs_production || true 
+         sudo docker rm be_nodejs_production || true
+         sudo docker run -m=4g -t -d -p $APP_PORT_1:$APP_PORT_1 --name be_nodejs_production --env APP_PORT=$APP_PORT_1  --env DB_PORT=$DB_PORT --env DB_HOST=$DB_HOST --env DB_USER=$DB_USER  --env DB_PASSWORD=$DB_PASSWORD --env DB_NAME=$DB_NAME  --env DB_CONNECTION_LIMIT= $DB_CONNECTION_LIMIT  namphamhcmus1906/capstone:be.production
    
