--- a/.github/workflows/capstone-be-CD.yml
+++ b/.github/workflows/capstone-be-CD.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-     APP_PORT_1: ${{ secrets.APP_PORT_1 }}
+     APP_PORT_1: 8080
      DB_PORT: ${{ secrets.DB_PORT }}
      DB_HOST: ${{ secrets.DB_HOST }}
      DB_USER: ${{ secrets.DB_USER }}
