--- a/.github/workflows/capstone-be-CD.yml
+++ b/.github/workflows/capstone-be-CD.yml
@@ -37,5 +37,5 @@ jobs:
          cd -
          sudo docker stop be_nodejs_production || true 
          sudo docker rm be_nodejs_production || true
-         sudo docker run -m=4g -t -d -p $APP_PORT_1:$APP_PORT_1 --name be_nodejs_production --env APP_PORT=$APP_PORT_1  --env DB_PORT=$DB_PORT --env DB_HOST=$DB_HOST --env DB_USER=$DB_USER  --env DB_PASSWORD=$DB_PASSWORD --env DB_NAME=$DB_NAME  --env DB_CONNECTION_LIMIT= $DB_CONNECTION_LIMIT  namphamhcmus1906/capstone:be.production
+         sudo docker run -m=4g -t -d -p 8080:8080 --name be_nodejs_production --env APP_PORT=8080  --env DB_PORT=3306 --env DB_HOST=$DB_HOST --env DB_USER=$DB_USER  --env DB_PASSWORD=$DB_PASSWORD --env DB_NAME=$DB_NAME  --env DB_CONNECTION_LIMIT= 10  namphamhcmus1906/capstone:be.production
    
