--- a/.github/workflows/capstone-be-CD.yml
+++ b/.github/workflows/capstone-be-CD.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-     APP_PORT_1: 8080
+     APP_PORT_1: ${{ secrets.APP_PORT_1 }}
      DB_PORT: ${{ secrets.DB_PORT }}
      DB_HOST: ${{ secrets.DB_HOST }}
      DB_USER: ${{ secrets.DB_USER }}
@@ -35,5 +35,7 @@ jobs:
          cd software-capstone-be
          sudo docker build --platform linux/amd64 -t namphamhcmus1906/capstone:be.production . 
          cd -
-         sudo docker run -m=4g -t -d -p 8080:8080 --name be_nodejs_production --env APP_PORT=8080 --env DB_PORT=3306 --env DB_HOST=api.ieltswarrior.me --env DB_USER=root --env DB_PASSWORD=xecnyw-xevbiK-gazsi6 --env DB_NAME=warrior --env DB_CONNECTION_LIMIT=10 namphamhcmus1906/capstone:be.production
+         sudo docker stop be_nodejs_production || true 
+         sudo docker rm be_nodejs_production || true
+         sudo docker run -m=4g -t -d -p ${{ secrets.APP_PORT_1 }}:${{ secrets.APP_PORT_1 }} --name be_nodejs_production --env APP_PORT=8080 --env DB_PORT=3306 --env DB_HOST=api.ieltswarrior.me --env DB_USER=root --env DB_PASSWORD=xecnyw-xevbiK-gazsi6 --env DB_NAME=warrior --env DB_CONNECTION_LIMIT=10 namphamhcmus1906/capstone:be.production
    
