--- a/.github/workflows/capstone-be-CD.yml
+++ b/.github/workflows/capstone-be-CD.yml
@@ -7,14 +7,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-     APP_PORT_1: ${{ secrets.APP_PORT_1 }}
-     DB_PORT: ${{ secrets.DB_PORT }}
-     DB_HOST: ${{ secrets.DB_HOST }}
-     DB_USER: ${{ secrets.DB_USER }}
-     DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-     DB_NAME: ${{ secrets.DB_NAME }}  
-     DB_CONNECTION_LIMIT: ${{ secrets.DB_CONNECTION_LIMIT }}
     defaults:
       run:
         working-directory: ./software-capstone-be
@@ -37,5 +29,5 @@ jobs:
          cd -
          sudo docker stop be_nodejs_production || true 
          sudo docker rm be_nodejs_production || true
-         sudo docker run -m=4g -t -d -p ${{ secrets.APP_PORT_1 }}:${{ secrets.APP_PORT_1 }} --name be_nodejs_production --env APP_PORT=${{ secrets.APP_PORT_1 }} --env DB_PORT=3306 --env DB_HOST=api.ieltswarrior.me --env DB_USER=root --env DB_PASSWORD=xecnyw-xevbiK-gazsi6 --env DB_NAME=warrior --env DB_CONNECTION_LIMIT=10 namphamhcmus1906/capstone:be.production
+         sudo docker run -m=4g -t -d -p ${{ secrets.APP_PORT_1 }}:${{ secrets.APP_PORT_1 }} --name be_nodejs_production --env APP_PORT=${{ secrets.APP_PORT_1 }} --env DB_PORT=${{ secrets.DB_PORT }} --env DB_HOST=${{ secrets.DB_HOST }} --env DB_USER=${{ secrets.DB_USER }} --env DB_PASSWORD=${{ secrets.DB_PASSWORD }} --env DB_NAME=${{ secrets.DB_NAME }} --env DB_CONNECTION_LIMIT=${{ secrets.DB_CONNECTION_LIMIT }} namphamhcmus1906/capstone:be.production
    
