--- a/.github/workflows/capstone-be-CD.yml
+++ b/.github/workflows/capstone-be-CD.yml
@@ -29,5 +29,5 @@ jobs:
          cd -
          sudo docker stop be_nodejs_production || true 
          sudo docker rm be_nodejs_production || true
-         sudo docker run -m=4g -t -d -p ${{ secrets.APP_PORT_1 }}:${{ secrets.APP_PORT_1 }} --name be_nodejs_production --env APP_PORT=${{ secrets.APP_PORT_1 }} --env DB_PORT=${{ secrets.DB_PORT }} --env DB_HOST=${{ secrets.DB_HOST }} --env DB_USER=${{ secrets.DB_USER }} --env DB_PASSWORD=${{ secrets.DB_PASSWORD }} --env DB_NAME=${{ secrets.DB_NAME }} --env DB_CONNECTION_LIMIT=${{ secrets.DB_CONNECTION_LIMIT }} namphamhcmus1906/capstone:be.production
-   
+         sudo docker run -m=4g -t -d -p ${{ secrets.APP_PORT_1 }}:${{ secrets.APP_PORT_1 }} --name be_nodejs_production_1 --env APP_PORT=${{ secrets.APP_PORT_1 }} --env DB_PORT=${{ secrets.DB_PORT }} --env DB_HOST=${{ secrets.DB_HOST }} --env DB_USER=${{ secrets.DB_USER }} --env DB_PASSWORD=${{ secrets.DB_PASSWORD }} --env DB_NAME=${{ secrets.DB_NAME }} --env DB_CONNECTION_LIMIT=${{ secrets.DB_CONNECTION_LIMIT }} namphamhcmus1906/capstone:be.production
+         sudo docker run -m=4g -t -d -p ${{ secrets.APP_PORT_2 }}:${{ secrets.APP_PORT_2 }} --name be_nodejs_production_2 --env APP_PORT=${{ secrets.APP_PORT_2 }} --env DB_PORT=${{ secrets.DB_PORT }} --env DB_HOST=${{ secrets.DB_HOST }} --env DB_USER=${{ secrets.DB_USER }} --env DB_PASSWORD=${{ secrets.DB_PASSWORD }} --env DB_NAME=${{ secrets.DB_NAME }} --env DB_CONNECTION_LIMIT=${{ secrets.DB_CONNECTION_LIMIT }} namphamhcmus1906/capstone:be.production
